# chibi-datalog

./: .gitignore  Cargo.toml  README.md
datalog-syntax/: Cargo.toml
datalog-syntax/src/: lib.rs
datalog_rule_macro/src/: lib.rs
datalog_rule_macro/tests/: program.rs
src/: bin.rs  engine.rs  evaluation.rs  helpers.rs  interning.rs  lib.rs  program_transformations.rs
src/engine/: datalog.rs  index.rs  program_index.rs  rewrite.rs  storage.rs
src/evaluation/: query.rs  rule.rs  semi_naive.rs
src/helpers/: helpers.rs  program_transformations.rs
src/interning/: fact_registry.rs
src/program_transformations/: delta_program.rs  dred.rs
