[package]
name = "chibi-datalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.0.0"
datalog-syntax = { path = "datalog-syntax" }
datalog_rule_macro = { path = "datalog_rule_macro" }
crepe = "0.1.8"
ascent = "*"
ahash="0.8.6"
rayon="1.8.0"
dashmap="5.5.3"

[dev-dependencies]
pretty_assertions = "1.4.0"

[[bin]]
name = "benches"
path = "src/bin.rs"